Designer/QFormBuilder::save(): Fix traversal of QGridLayout/QFormLayout

Remove redundant code in qdesigner_resource ass well.

Reviewed-by: Jarek Kobus <jaroslaw.kobus@nokia.com>
Task-number: QTBUG-13683